tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -401,6 +401,7 @@ private slots:
     void functionSignatureEnforcement();
     void importPrecedence();
     void nullIsNull();
+    void multiRequired();
 
 private:
     QQmlEngine engine;
@@ -7738,6 +7739,18 @@ void tst_qqmllanguage::nullIsNull()
     QVERIFY(!o.isNull());
     QVERIFY(o->property("someProperty").value<QObject*>() != nullptr);
     QTRY_COMPARE(o->property("someProperty").value<QObject*>(), nullptr);
+}
+
+void tst_qqmllanguage::multiRequired()
+{
+    QQmlEngine engine;
+    const QUrl url = testFileUrl("multiRequired.qml");
+    QQmlComponent c(&engine, url);
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+    QScopedPointer<QObject> o(c.create());
+    QVERIFY(o.isNull());
+    QCOMPARE(c.errorString(),
+             qPrintable(url.toString() + ":5 Required property description was not initialized\n"));
 }
 
 QTEST_MAIN(tst_qqmllanguage)
